artifacts/step29-public-grafana-argocd/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/proxy-buffer-size":"64k","nginx.ingress.kubernetes.io/proxy-buffers-number":"4"},"name":"grafana-public","namespace":"observability"},"spec":{"ingressClassName":"nginx","rules":[{"host":"grafana-do-osdu.esstar.com.vn","http":{"paths":[{"backend":{"service":{"name":"kps-grafana","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["grafana-do-osdu.esstar.com.v [...]
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
  creationTimestamp: "2026-03-02T11:05:56Z"
  generation: 1
  name: grafana-public
  namespace: observability
  resourceVersion: "16571351"
  uid: ac5ff62d-e879-4c73-b234-49606c3dffeb
spec:
  ingressClassName: nginx
  rules:
  - host: grafana-do-osdu.esstar.com.vn
    http:
      paths:
      - backend:
          service:
            name: kps-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana-do-osdu.esstar.com.vn
    secretName: cf-origin-grafana-tls
status:
  loadBalancer:
    ingress:
    - ip: 10.118.0.6
    - ip: 10.118.0.7
